--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "testing": "vite --mode testing",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
     "test": "vitest run --mode testing",
@@ -29,7 +29,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@badeball/cypress-cucumber-preprocessor": "^18.0.1",
+    "@badeball/cypress-cucumber-preprocessor": "^6.0.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "@cucumber/cucumber": "^9.2.0",
     "@cypress/code-coverage": "^3.10.7",
@@ -45,7 +45,7 @@
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-c8": "^0.31.1",
-    "cypress": "^12.15.0",
+    "cypress": "^4.2.0",
     "esbuild": "^0.18.8",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
