--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,9 @@
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-c8": "^0.31.1",
+    "cypress": "^13.2.0",
+    "cypress-cucumber-preprocessor": "^4.3.1",
+    "cypress-xpath": "^2.0.1",
     "esbuild": "^0.18.8",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
